--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "flexible.js": "^2.0.19",
+    "stylus-loader": "^3.0.2",
+    "vant": "^2.12.48",
+    "vue": "^2.6.14",
+    "vue-router": "^3.6.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
+    "babel-plugin-import": "^1.13.5",
+    "css-loader": "^6.7.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
+    "style-loader": "^3.3.1",
+    "stylus": "^0.59.0",
     "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
