--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "flexible.js": "^2.0.19",
     "stylus-loader": "^3.0.2",
     "vant": "^2.12.48",
     "vue": "^2.6.14",
-    "vue-router": "^3.6.4"
+    "vue-router": "^3.6.4",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
