--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "flexible.js": "^2.0.19",
+    "mockjs": "^1.1.0",
     "stylus-loader": "^3.0.2",
     "vant": "^2.12.48",
     "vue": "^2.6.14",
