--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "axios": "^0.27.2",
     "better-scroll": "^2.4.2",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.5",
     "flexible.js": "^2.0.19",
     "mockjs": "^1.1.0",
     "stylus-loader": "^3.0.2",
     "vant": "^2.12.48",
     "vue": "^2.6.14",
+    "vue-lazyload": "^1.2.3",
     "vue-router": "^3.6.4",
     "vuex": "^3.6.2"
   },
